--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
 
       <section>
         <div id="title">
-          <h1>{{ site.title }}</h1>
-          <p>{{ site.description }}</p>
+          <h1>Duo Extrema Software</h1>
+          <p>Organization page for Duo Extrema Software</p>
           <hr>
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">Duo Extrema Software</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
