--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,23 @@
 <body>
 <div id="header">
     <nav>
-        <li class="fork"><a href="{{ site.github.owner_url }}">GitHub Profile</a></li>
+        <li class="main-logo-left"><img src="/assets/img/logo_main_left.png" height="53" width="44" alt="Duo Extrema Software Logo"></li>
+        <li class="fork"><a href="">GitHub Profile</a></li>
+
+        {% if page.title != 'Contact Us' %}
+        <li class="fork"><a href="/contact">About & Contact</a></li>
+        {% endif %}
+
+        {% if page.title != 'Duo Extrema Software' %}
+        <li class="fork"><a href="/index">Return Home</a></li>
+        {% endif %}
+
+        {% if page.title != 'Other Great Apps' %}
+        <li class="fork"><a href="/links">Other Great Apps</a></li>
+        {% endif %}
+
+        <li class="fork"><img src="/assets/img/logo_main_right.png" height="53" width="44" alt="Duo Extrema Software Logo"></li>
+
         {% if site.show_downloads %}
         <!--            <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>-->
         <!--            <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>-->
@@ -32,13 +48,11 @@
 
     <section>
         <div id="title">
-            <h1>{{ site.title | default: site.github.owner_name }}</h1>
-            <p>{{ site.description | default: site.github.project_tagline }}</p>
+            <h1>{{ page.title }}</h1>
+            <p>{{ page.description }}</p>
             <hr>
-            <span class="credits left">Project maintained by <a
-                    href="{{ site.github.owner_url }}">Duo Extrema Software</a></span>
-            <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a
-                    href="https://twitter.com/mattgraham">mattgraham</a></span>
+            <span class="credits right">Hosted on GitHub Pages &mdash; Original theme 'Midnight' by
+                <a href="https://twitter.com/mattgraham">mattgraham</a></span>
         </div>
 
         {{ content }}
@@ -57,5 +71,25 @@
 <!--        ga('send', 'pageview');-->
 <!--      </script>-->
 {% endif %}
+
+<div id="footer">
+    <div class="wrapper inner-footer">
+        <br>
+        <h3>Disclaimer</h3>
+
+        <p>Duo Extrema Software is not a subsidiary of, or in any way
+            affiliated with, Elder Games LLC, owner of the aforementioned game
+            Project: Gorgon.
+            We are purely fan-based development and respect all
+            licenses, copyrights, restrictions, user agreements, or other
+            legally-binding restrictions implemented by Elder Games LLC.</p>
+        <p>If you
+            feel that an infringement has occurred in any of our projects please
+            <a href="/contact">contact us</a> ASAP.</p>
+
+        <p>Thank you!</p>
+        <br>
+    </div>
+</div>
 </body>
 </html>
