Update to reflect new org name, formatting tweaks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,15 +20,15 @@
 
 <div id="header">
     <nav>
-        <li class="main-logo-left"><img src="/assets/img/logo_main_left.png" height="53" width="44"
-                                        alt="Duo Extrema Software Logo"></li>
+        <li class="fork"><img src="/assets/img/logo1.png" height="53" width="44"
+                                        alt="Umbra Aeterna Labs Logo"></li>
         <li class="fork"><a href="{{ site.github.owner_url }}">GitHub Profile</a></li>
 
-        {% if page.title != 'Contact Us' %}
+        {% if page.title != 'Contact' %}
         <li class="fork"><a href="/contact">About & Contact</a></li>
         {% endif %}
 
-        {% if page.title != 'Duo Extrema Software' %}
+        {% if page.title != 'Umbra Aeterna Labs' %}
         <li class="fork"><a href="/index">Return Home</a></li>
         {% endif %}
 
@@ -36,8 +36,8 @@
         <li class="fork"><a href="/links">Other Great Apps</a></li>
         {% endif %}
 
-        <li class="fork"><img src="/assets/img/logo_main_right.png" height="53" width="44"
-                              alt="Duo Extrema Software Logo"></li>
+        <li class="fork"><img src="/assets/img/logo1.png" height="53" width="44"
+                              alt="Umbra Aeterna Labs Logo"></li>
     </nav>
 </div><!-- end header -->
 
@@ -80,7 +80,7 @@
     <div class="wrapper inner-footer">
         <br>
         <h3>Disclaimer</h3>
-        <p>Duo Extrema Software is not a subsidiary of, or in any way
+        <p>Umbra Aeterna Labs is not a subsidiary of, or in any way
             affiliated with, Elder Games LLC, owner of the aforementioned game
             Project: Gorgon.
             We are purely fan-based development and respect all
@@ -88,7 +88,7 @@
             legally-binding restrictions implemented by Elder Games LLC.</p>
         <p>If you
             feel that an infringement has occurred in any of our projects please
-            <a href="/contact">contact us</a> ASAP.</p>
+            contact us ASAP.</p>
         <p>Thank you!</p>
         <br>
     </div>
