--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,10 +7,14 @@ body {
   padding: 0;
 }
 
+img {
+  display: inline-block;
+  list-style: none;
+}
+
 section img {
   max-width: 650px;
   width: 650px;
-
 }
 
 h1 {
@@ -40,6 +44,8 @@ section #title h1 {
 
 #header nav {
   min-width: 565px;
+  max-width: 700px;
+  width: 96%;
 }
 
 #header nav li a {
@@ -48,7 +54,7 @@ section #title h1 {
 }
 
 #header nav li.fork {
-  margin: 0 20px 0 0;
+  margin: 0 0 0 5.8%;
 }
 
 a:hover {
@@ -69,3 +75,6 @@ a:hover, #header nav li a:hover {
   background-image: linear-gradient(rgba(100, 0, 0, 0.3) 0%, rgba(40, 0, 0, 0.3) 100%);
 }
 
+#header nav li {
+  display: inline;
+}
