update copyright on layout, add noInspection CssUnknownTarget to site theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@
             user agreements, and other legally-binding restrictions implemented by Elder Games.
             Questions/concerns may be submitted via <a href="mailto:umbra.aeterna.labs@protonmail.com">email</a>.
             Thank you!</p>
-        <p class="copyright">Copyright &copy; 2020 Umbra Aeterna Labs</p>
+        <p class="copyright">Copyright 2021 Umbra Aeterna Labs</p>
         <br>
     </div>
 </div>
