--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@
             affiliated with, Elder Games LLC ("Elder Games"), owner of the aforementioned game Project: Gorgon.
             UAL purely fan-based development and respect all licenses, copyrights, restrictions,
             user agreements, and other legally-binding restrictions implemented by Elder Games.
-            Questions/concerns may be submitted via <a href="mailto:umbra.aeterna.labs@protonmail.com">email</a>.
+            Questions/concerns may be submitted via <a href="mailto:umbra.aeterna.labs@gmail.com">email</a>.
             Thank you!</p>
         <p class="copyright">Copyright 2021 Umbra Aeterna Labs</p>
         <br>
