--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,9 @@
             user agreements, and other legally-binding restrictions implemented by Elder Games.
             Questions/concerns may be submitted via <a href="mailto:umbra.aeterna.labs@gmail.com">email</a>.
             Thank you!</p>
-        <p class="copyright">Copyright 2021 Umbra Aeterna Labs</p>
+        <p class="copyright">Copyright 2022 Umbra Aeterna Labs
+            <a href="https://github.com/Umbra-Aeterna-Labs">https://github.com/Umbra-Aeterna-Labs</a>
+        </p>
         <br>
     </div>
 </div>
