remove link from footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright 2022.
+  -->
+
 <!doctype html>
 <html lang="{{ site.lang | default: 'en-US' }}">
 <head>
@@ -88,9 +92,7 @@
             user agreements, and other legally-binding restrictions implemented by Elder Games.
             Questions/concerns may be submitted via <a href="mailto:umbra.aeterna.labs@gmail.com">email</a>.
             Thank you!</p>
-        <p class="copyright">Copyright 2022 Umbra Aeterna Labs
-            <a href="https://github.com/Umbra-Aeterna-Labs">https://github.com/Umbra-Aeterna-Labs</a>
-        </p>
+        <p class="copyright">Copyright 2022 Umbra Aeterna Labs</p>
         <br>
     </div>
 </div>
