--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,7 @@
+/*!
+ * Copyright 2022.
+ */
+
 ---
 ---
 
@@ -20,7 +24,7 @@ section img {
 
 h1 {
   //color: rgba(160, 0, 0, 1.0);
-  color: #ffffff;
+  color: #f0e7d5;
 }
 
 h2 {
@@ -77,7 +81,7 @@ a:hover {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-a:hover, #header nav li a:hover {
+a:hover, #header nav ul li a:hover {
   border-color: rgba(0, 0, 0, 0.0);
   text-shadow: 2px 2px black;
 }
@@ -100,7 +104,7 @@ img[alt$="-96px"]{
 
 .copyright {
   text-align: center;
-  color: #ffffff;
+  color: #f0e7d5;
 }
 
 .right {
